[BE-2] feat: добавлен ряд по дням в аналитике
